fixes text alignment on hz signpost

--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -217,10 +217,9 @@ canvas {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-  top: 45%;
-	padding-top: 1px;
+  top: 44.75%;
   left: $col-w * 2.25;
-  width: $col-w * 1;
+  width: $col-w * 0.9;
   height: auto;
   font-size: 1.1em;
   font-weight: 600;
